Top margin add in mobile version

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
   <div class="container">
     <div class="row justify-content-center">
-       <div class="col-12 col-lg-6 m-auto px-1  align-self-center  text-center ">
+       <div class="col-12 col-lg-6 m-auto px-1  align-self-center  text-center mt-5 ">
         <h2>Features</h2>
         <p class="lead ms-5 me-5">Our aim is to make itquick and easy for you to access your favourite websites. Your bookmarks sync between your devices so you can access them on the go.</p>
        </div>
@@ -138,12 +138,12 @@
     </div>
 
     <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
-      <h2 class="display-7 fw-normal">Download the extension</h2>
+      <h2 class="display-7 fw-normal mt-5">Download the extension</h2>
       <p class="fs-5 text-muted">We've got more browsers in the pipeline. Please do let us know if you;ve got a favourite you'd like us to prioritize.</p>
     </div>
 
     <main class="container text-center">
-      <div class="row row-cols-1 row-cols-md-3 mb-3 justify-content-center ">
+      <div class="row row-cols-1 row-cols-md-3 mb-3 justify-content-center mb-5">
         <div class="col-md-3 text-center">
           <div class="custom-card mb-4 rounded-3 shadow-sm">
             <div class="card-body">
@@ -198,7 +198,7 @@
     </main>
     <div class="container">
       <div class="row justify-content-center">
-         <div class="col-12 display-7 align-self-center  text-center ">
+         <div class="col-12 display-7 align-self-center  text-center mt-5 ">
           <h2>Frequently Asked Questions</h2>
           <p class="lead">Here are some of our FAQs. If you have any other questions you'd like answered please feel free to email us.</p>
          </div>
@@ -251,7 +251,7 @@
         </div>
       </div>
     </div>
-    <div class="d-grid gap-2 d-md-flex mt-4 justify-content-md-center">
+    <div class="d-grid gap-2 d-md-flex mt-4 mb-5 justify-content-md-center">
       <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">More Info</button>
     </div>
   </div>
@@ -263,7 +263,7 @@
   <p></p>
 </div>
 
-  <footer class="bg-primary text-white text-center text-lg-start">
+  <footer class="bg-primary text-white text-center text-lg-start mt-5">
     <div class="container p-4">
       <div class="row">
         <div class="col-lg-12 col-md-12 mb-4 mb-md-0 text-center">
@@ -280,7 +280,7 @@
                   </div>
                 </div>             
               <div class="col-auto mt-0">
-                <button data-mdb-ripple-init type="submit" class="btn btn-secondary mb-4">Contact Us</button>
+                <button data-mdb-ripple-init type="submit" class="btn btn-secondary mb-4 mt-3">Contact Us</button>
                 </div>
 </form>
               </div>
