Email line align

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
             <div class="row justify-content-center">
               <form class="row needs-validation justify-content-center align-items-start text-center mx-4 rounded-2 gx-2 " novalidate>
               <div class="col-md-5 col-12">
-                  <input type="email" id="user-email" class="form-control" placeholder="Enter your email address" required />
+                  <input type="email" id="user-email" class="form-control mt-3" placeholder="Enter your email address" required />
                   <div class="invalid-feedback text-light bg-secondary rounded-bottom mt-0 p-2 text-start">
                     Enter a valid e-mail
                   </div>
